tests/errors/semantics/circular_dependencies_funcrun.odl
main :: () -> void {
    foo :: () -> int {
        x := @run foo();
        return x;
    };

    foo();
};